--- a/Project Templates/Personal/Manual Single View App.xctemplate/TemplateInfo.plist
+++ b/Project Templates/Personal/Manual Single View App.xctemplate/TemplateInfo.plist
@@ -10,6 +10,7 @@
 	<string>com.useyourloaf.dt.unit.manual.singleViewApplication</string>
 	<key>Ancestors</key>
 	<array>
+		<string>com.apple.dt.unit.storyboardApplication</string>
 		<string>com.apple.dt.unit.cocoaTouchApplicationBase</string>
 		<string>com.apple.dt.unit.coreDataCocoaTouchApplication</string>
 	</array>
@@ -156,6 +157,13 @@ window?.makeKeyAndVisible()</string>
 	</array>
 	<key>Definitions</key>
 	<dict>
+		<key>Base.lproj/Main.storyboard</key>
+		<dict>
+			<key>Path</key>
+			<string>Main.storyboard</string>
+			<key>SortOrder</key>
+			<string>99</string>
+		</dict>
 		<key>*:implementation:methods:applicationWillResignActive:comments</key>
 		<string></string>
 		<key>*:implementation:methods:applicationDidEnterBackground:comments</key>
